Solve z-index mistake in header navigation mobile

--- a/src/layout/components/header/components/nav-mobile/nav-mobile.module.scss
+++ b/src/layout/components/header/components/nav-mobile/nav-mobile.module.scss
@@ -4,6 +4,7 @@
   position: fixed;
   inset: 0;
   top: $header-height;
+  z-index: 1000;
   background: white;
   padding-top: 4rem;
   overflow: hidden;
